Add Requires and Conflicts to the database.  Eventually we will need more information in the DB from the RPM header files.
Some CSS additions for making tables.  It sucks.

We now have Systems and Channels pages that work.


git-svn-id: http://current.tigris.org/svn/current/trunk@281 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/cwebapp/cwebapp/static/css/current.css
+++ b/cwebapp/cwebapp/static/css/current.css
@@ -86,8 +86,29 @@ body {
     font-size: 1em;
 }
 
-#content {
+.content {
     margin: 1em;
     color: black;
 }
 
+table.tabledata {
+    background: #8888ff;
+    border-collapse: collapse;
+    padding: 4px 4px 4px 4px;
+}
+
+table.tabledata th {
+    padding: 4px 4px 4px 4px;
+}
+
+table.tabledata td {
+    padding: 4px 4px 4px 4px;
+}
+
+tr.oddrow {
+    background: #ececec;
+}
+
+tr.evenrow {
+    background: #ffffff;
+}
